# CodeGraphContext-rs

./: .env.example  .gitignore  CLAUDE.md  README.kor.md  README.md  README.uk.md  README.zh-CN.md  cgc_entry.py  docker-compose.template.yml  plan1.md  pyproject.toml
.github/workflows/: build.yml
rust/cgc-core/: Cargo.toml
rust/cgc-core/src/: lib.rs  parser.rs  types.rs  watcher.rs
rust/cgc-core/src/lang/: mod.rs  python.rs  rust_lang.rs
rust/cgc-core/src/resolution/: calls.rs  inheritance.rs
rust/cgc-core/src/writer/: calls.rs  decorators.rs  files.rs  function_edges.rs  impls.rs  imports.rs  inheritance.rs  mod.rs  repository.rs  symbols.rs
rust/cgc-python/: Cargo.toml
rust/cgc-python/src/: conversions.rs  lib.rs  pyany_bolt.rs  watcher.rs  writer.rs
scripts/: bulk_index.py
src/codegraphcontext/: server.py  tool_definitions.py
src/codegraphcontext/cli/: cli_helpers.py  config_manager.py  main.py  setup_wizard.py
src/codegraphcontext/core/: __init__.py  cgcignore.py  watcher.py
src/codegraphcontext/tools/: advanced_language_query_tool.py  code_finder.py  graph_builder.py  tree_sitter_parser.py
src/codegraphcontext/tools/handlers/: query_handlers.py
src/codegraphcontext/tools/indexing/: engine.py  pipeline.py  pre_scan.py  sanitize.py  (+1 more)
src/codegraphcontext/utils/: tree_sitter_manager.py
src/codegraphcontext/viz/: server.py
tests/integration/cli/: test_cli_commands.py
tests/unit/core/: test_cgcignore_core.py  test_cgcignore_patterns.py
tests/unit/tools/: test_graph_builder_perf_fixes.py
website/src/components/: CodeGraphViewer.tsx
(+4 files in other folders)
