[package]
name = "cgc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
streaming-iterator = "0.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
neo4rs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "2"
