[package]
name = "cgc-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "_cgc_rust"
crate-type = ["cdylib"]

[dependencies]
cgc-core = { path = "../cgc-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
neo4rs = "0.8"
